<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/message1"
        android:layout_width="214dp"
        android:layout_height="30dp"
        android:text="@string/hello_world"
        android:textColor="#0E0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />
    <TextView
        android:id="@+id/message6"
        android:layout_width="241dp"
        android:layout_height="26dp"
        android:layout_marginTop="36dp"
        android:text="@string/enter_word"
        android:textColor="#1C0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/message1"
        app:layout_goneMarginTop="50dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/message4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/enter_num"
        android:textColor="#100000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/message5ç"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/message3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num_input"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/message4"
        app:layout_goneMarginTop="50dp"
        tools:layout_editor_absoluteX="1dp" />



    <EditText
        android:id="@+id/message5ç"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/word_input"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/message6"
        tools:layout_editor_absoluteX="1dp"
        app:layout_goneMarginTop="50dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buttonBye"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:text="@string/go_button"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message3" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>